--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PrepPioneers</title>
+    <title>WebKys-Education</title>
     <link rel="icon" type="image/x-icon" href="sources/PrepPioneers.png">
     <link rel="stylesheet" href="css/index.css">
 </head>
