--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WebKys</title>
+    <title>Contact-Us</title>
     <link href='https://fonts.googleapis.com/css?family=Lato:400,100,300' rel='stylesheet' type='text/css'>
 
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,400,700" rel="stylesheet">
