--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WebKys-Education</title>
-    <link rel="icon" type="image/x-icon" href="sources/PrepPioneers.png">
+    <title>WebKysLibrary</title>
+    <link rel="icon" type="image/x-icon" href="sources/WebKys.png">
     <link rel="stylesheet" href="css/index.css">
 </head>
-<div class="logo"><img src="sources/PrepPioneers.gif" alt=""></div>
+<div class="logo"><img src="sources/WebKys.gif" alt=""></div>
 </a>
     <input class="menu-icon" type="checkbox" id="menu-icon" name="menu-icon"/>
     <label for="menu-icon"></label>
@@ -20,8 +20,91 @@
     </nav>
     <div class="section-center">
     <h1 class="mb-0"><span class="auto-type"></h1>
-    </div></div>
+    </div>
+</div>
 <body>
+    <div class="app">
+        <header>
+        </header>
+        <div class="tag-list">
+          <div class="loop-slider" style="--duration:15951ms; --direction:normal;">
+            <div class="inner">
+              <div class="tag"><span>#</span> Assignments</div>
+              <div class="tag"><span>#</span> Notes</div>
+              <div class="tag"><span>#</span> PYQ's</div>
+              <div class="tag"><span>#</span> IITMBS</div>
+              <div class="tag"><span>#</span> College</div>
+              <!-- duplicated content -->
+              <div class="tag"><span>#</span> Assignments</div>
+              <div class="tag"><span>#</span> Notes</div>
+              <div class="tag"><span>#</span> PYQ's</div>
+              <div class="tag"><span>#</span> IITMBS</div>
+              <div class="tag"><span>#</span> College</div>
+            </div>
+          </div>
+          <div class="loop-slider" style="--duration:19260ms; --direction:reverse;">
+            <div class="inner">
+              <div class="tag"><span>#</span> Notes</div>
+              <div class="tag"><span>#</span> Questions</div>
+              <div class="tag"><span>#</span> Assignments</div>
+              <div class="tag"><span>#</span> Neet</div>
+              <div class="tag"><span>#</span> PYQ's</div>
+              <!-- duplicated content -->
+              <div class="tag"><span>#</span> Notes</div>
+              <div class="tag"><span>#</span> Questions</div>
+              <div class="tag"><span>#</span> Assignments</div>
+              <div class="tag"><span>#</span> Neet</div>
+              <div class="tag"><span>#</span> PYQ's</div>
+            </div>
+          </div>
+          <div class="loop-slider" style="--duration:10449ms; --direction:normal;">
+            <div class="inner">
+              <div class="tag"><span>#</span> Qualifier</div>
+              <div class="tag"><span>#</span> Neet</div>
+              <div class="tag"><span>#</span> Jee</div>
+              <div class="tag"><span>#</span> Cuet</div>
+              <div class="tag"><span>#</span> Net/Jrf</div>
+              <!-- duplicated content -->
+              <div class="tag"><span>#</span> Qualifier</div>
+              <div class="tag"><span>#</span> Neet</div>
+              <div class="tag"><span>#</span> Jee</div>
+              <div class="tag"><span>#</span> Cuet</div>
+              <div class="tag"><span>#</span> Boards</div>
+            </div>
+          </div>
+          <div class="loop-slider" style="--duration:16638ms; --direction:reverse;">
+            <div class="inner">
+              <div class="tag"><span>#</span> WebKys</div>
+              <div class="tag"><span>#</span> Net/Jrf</div>
+              <div class="tag"><span>#</span> Quiz</div>
+              <div class="tag"><span>#</span> Jee</div>
+              <div class="tag"><span>#</span> IITMBS</div>
+              <!-- duplicated content -->
+              <div class="tag"><span>#</span> WebKys</div>
+              <div class="tag"><span>#</span> Net/Jrf</div>
+              <div class="tag"><span>#</span> Quiz</div>
+              <div class="tag"><span>#</span> Jee</div>
+              <div class="tag"><span>#</span> IITMBS</div>
+            </div>
+          </div>
+          <div class="loop-slider" style="--duration:15936ms; --direction:normal;">
+            <div class="inner">
+              <div class="tag"><span>#</span> IITMBS</div>
+              <div class="tag"><span>#</span> WebKys</div>
+              <div class="tag"><span>#</span> Notes</div>
+              <div class="tag"><span>#</span> PYQ's</div>
+              <div class="tag"><span>#</span> WebKys</div>
+              <!-- duplicated content -->
+              <div class="tag"><span>#</span> IITMBS</div>
+              <div class="tag"><span>#</span> WebKys</div>
+              <div class="tag"><span>#</span> Notes</div>
+              <div class="tag"><span>#</span> PYQ's</div>
+              <div class="tag"><span>#</span> WebKys</div>
+            </div>
+          </div>
+          <div class="fade"></div>
+        </div>
+      </div>
 </body>
 <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
 <script src="js/index.js"></script>
