--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
     <label for="menu-icon"></label>
     <nav class="nav"> 		
     <ul class="pt-5">
-        <li><a href="GA.html">Graded-assignments</a></li>
-        <li><a href="pyq.html">PYq's</a></li>
+        <li><a href="GA.html">Assignments</a></li>
+        <li><a href="pyq.html">PYQ's</a></li>
         <li><a href="notes.html">Notes</a></li>
+        <li><a href="Coming.html">Quiz</a></li>
         <li><a href="contact.html">Contact</a></li>
     </ul>
     </nav>
