--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html lang="en">
 <head>
+    <meta name="google-adsense-account" content="ca-pub-1304817642981056">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebKysLibrary</title>
