--- a/notes.html
+++ b/notes.html
@@ -38,6 +38,8 @@
     </div>
 
 </body>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1304817642981056"
+     crossorigin="anonymous"></script>
 <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
 <script src="js/notes.js"></script>
 </html>
