--- a/notes.html
+++ b/notes.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Notes</title>
-    <link rel="icon" type="image/x-icon" href="sources/PrepPioneers.png">
+    <link rel="icon" type="image/x-icon" href="sources/webkys.png">
     <link rel="stylesheet" href="css/notes.css">
 </head>
     <div class="logo"><img src="sources/PrepPioneers.gif" alt=""></div>
