--- a/notes.html
+++ b/notes.html
@@ -3,10 +3,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Notes</title>
-    <link rel="icon" type="image/x-icon" href="sources/webkys.png">
+    <link rel="icon" type="image/x-icon" href="sources/WebKys.png">
     <link rel="stylesheet" href="css/notes.css">
 </head>
-    <div class="logo"><img src="sources/PrepPioneers.gif" alt=""></div>
+    <div class="logo"><img src="sources/WebKys.gif" alt=""></div>
     <div class="navigation">
     <nav>
     <ul class="sidebar">
