--- a/pyq.html
+++ b/pyq.html
@@ -3,10 +3,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PYQ's</title>
-    <link rel="icon" type="image/x-icon" href="sources/PrepPioneers.png">
+    <link rel="icon" type="image/x-icon" href="sources/WebKys.png">
     <link rel="stylesheet" href="css/pyq.css">
 </head>
-    <div class="logo"><img src="sources/PrepPioneers.gif" alt=""></div>
+    <div class="logo"><img src="sources/WebKys.gif" alt=""></div>
     <div class="navigation">
     <nav>
     <ul class="sidebar">
@@ -40,6 +40,8 @@
     </div>
 
 </body>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1304817642981056"
+     crossorigin="anonymous"></script>
 <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
 <script src="js/pyq.js"></script>
 </html>
