--- a/contact.html
+++ b/contact.html
@@ -102,6 +102,8 @@
         </form>
     </div>
 </body>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1304817642981056"
+     crossorigin="anonymous"></script>
 <script>
     const scriptURL = 'https://script.google.com/macros/s/AKfycbzZENNouGx_nb6f1Xg98Ual1Xkm_9UXIc_Bg2gTtuncsZNR8xeWVPZoo3ldla570ji8Pw/exec'
     const form = document.forms['google-sheet']
