--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
     <link rel="stylesheet" href="css/contact.css">
 </head>
-    <div class="logo"><img src="Source/EBKYS_20250112_140102_0001.gif" alt=""></div>
+    <div class="logo"><img src="Source/WebKys.gif" alt=""></div>
     <div class="nav">
         <nav>
             <ul class="sidebar">
